fix layout issue for headers and content on tablet screens

--- a/source/stylesheets/partials/_content.scss
+++ b/source/stylesheets/partials/_content.scss
@@ -2,8 +2,12 @@
   @include media($medium-screen) {
     // @include span-columns(6);
     margin: auto;
-    width: 50%;
+    width: 70%;
     float: none;
+  }
+
+  @include media($large-screen) {
+    width: 50%;
   }
 
   img {
